// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/molecules/AppImageZoomable props imgClass img要素にクラスが付与される 1`] = `
<div>
  <div
    class="inline-block"
  >
    <div
      class="zoomable-area relative"
      data-testid="zoomable-area"
    >
      <img
        class="select-none pointer-events-none foo"
        data-testid="zoomable-area-img"
        src="small.jpeg"
      />
      <div
        class="caution absolute right-0 bottom-0 text-white text-xs p-2"
      >
        無断転載禁止
      </div>
    </div>
    <transition-stub
      enterclass="opacity-0"
      leavetoclass="opacity-0"
    >
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`components/molecules/AppImageZoomable renders correctly 1`] = `
<div>
  <div
    class="inline-block"
  >
    <div
      class="zoomable-area relative"
      data-testid="zoomable-area"
    >
      <img
        class="select-none pointer-events-none"
        data-testid="zoomable-area-img"
        src="small.jpeg"
      />
      <div
        class="caution absolute right-0 bottom-0 text-white text-xs p-2"
      >
        無断転載禁止
      </div>
    </div>
    <transition-stub
      enterclass="opacity-0"
      leavetoclass="opacity-0"
    >
      <!---->
    </transition-stub>
  </div>
</div>
`;

exports[`components/molecules/AppImageZoomable zoomable-areaをクリックするとズームする 1`] = `
<div>
  <div
    class="inline-block"
  >
    <div
      class="zoomable-area relative"
      data-testid="zoomable-area"
    >
      <img
        class="select-none pointer-events-none"
        data-testid="zoomable-area-img"
        src="small.jpeg"
      />
      <div
        class="caution absolute right-0 bottom-0 text-white text-xs p-2"
      >
        無断転載禁止
      </div>
    </div>
    <transition-stub
      enterclass="opacity-0"
      leavetoclass="opacity-0"
    >
      <div
        class="zoomed-area flex fixed inset-0 overflow-auto bg-white bg-opacity-75 z-50 transition-opacity duration-300"
        data-testid="zoomed-area"
      >
        <div
          class="m-auto"
        >
          <img
            class="max-w-none select-none pointer-events-none p-4"
            src="large.jpeg"
          />
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`components/molecules/AppImageZoomable zoomed-areaをクリックするとズームアウトする 1`] = `
<div>
  <div
    class="inline-block"
  >
    <div
      class="zoomable-area relative"
      data-testid="zoomable-area"
    >
      <img
        class="select-none pointer-events-none"
        data-testid="zoomable-area-img"
        src="small.jpeg"
      />
      <div
        class="caution absolute right-0 bottom-0 text-white text-xs p-2"
      >
        無断転載禁止
      </div>
    </div>
    <transition-stub
      enterclass="opacity-0"
      leavetoclass="opacity-0"
    >
      <!---->
    </transition-stub>
  </div>
</div>
`;
